wavepacket reference solution

--- a/src/wip_lz/plots/momentum.tex
+++ b/src/wip_lz/plots/momentum.tex
@@ -79,79 +79,85 @@
     \fi%
     \setlength{\fboxrule}{0.5pt}%
     \setlength{\fboxsep}{1pt}%
-\begin{picture}(8620.00,4300.00)%
+\begin{picture}(7180.00,5740.00)%
       \csname LTb\endcsname%%
-      \put(4310,4096){\makebox(0,0){\strut{}NaI case study}}%
+      \put(3590,5536){\makebox(0,0){\strut{}Mass error vs delta}}%
     \gplgaddtomacro\gplbacktext{%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,612){\makebox(0,0)[r]{\strut{}10^{-3}}}%
+      \put(1008,2962){\makebox(0,0)[r]{\strut{}10^-09}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,1631){\makebox(0,0)[r]{\strut{}10^{-2}}}%
+      \put(1008,3283){\makebox(0,0)[r]{\strut{}10^-08}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,2649){\makebox(0,0)[r]{\strut{}10^{-1}}}%
+      \put(1008,3604){\makebox(0,0)[r]{\strut{}10^-07}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,3668){\makebox(0,0)[r]{\strut{}10^{0}}}%
+      \put(1008,3925){\makebox(0,0)[r]{\strut{}10^-06}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(896,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}0}}}%
+      \put(1008,4247){\makebox(0,0)[r]{\strut{}10^-05}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(1320,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}10000}}}%
+      \put(1008,4568){\makebox(0,0)[r]{\strut{}10^-04}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(1743,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}20000}}}%
+      \put(1008,4889){\makebox(0,0)[r]{\strut{}10^-03}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(2167,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}30000}}}%
+      \put(1008,5210){\makebox(0,0)[r]{\strut{}10^-02}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(2590,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}40000}}}%
+      \put(1120,2758){\makebox(0,0){\strut{}}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3014,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}50000}}}%
+      \put(1580,2758){\makebox(0,0){\strut{}}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3437,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}60000}}}%
+      \put(2041,2758){\makebox(0,0){\strut{}}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3861,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}70000}}}%
+      \put(2501,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(2961,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(3422,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(3882,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(4342,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(4802,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(5263,2758){\makebox(0,0){\strut{}}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(5723,2758){\makebox(0,0){\strut{}}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
-      \put(150,2140){\rotatebox{-270}{\makebox(0,0){\strut{}$\|\phi\|_{L^2}$}}}%
+      \put(150,4086){\rotatebox{-270}{\makebox(0,0){\strut{}Absolute error}}}%
       \csname LTb\endcsname%%
-      \put(2114,846){\makebox(0,0)[r]{\strut{}$\phi^-$}}%
+      \put(4858,4976){\makebox(0,0)[r]{\strut{}LZadia}}%
+      \csname LTb\endcsname%%
+      \put(4858,4670){\makebox(0,0)[r]{\strut{}SA}}%
+      \csname LTb\endcsname%%
+      \put(4858,4364){\makebox(0,0)[r]{\strut{}SA2}}%
+      \csname LTb\endcsname%%
+      \put(4858,4058){\makebox(0,0)[r]{\strut{}SA3}}%
     }%
     \gplgaddtomacro\gplbacktext{%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,612){\makebox(0,0)[r]{\strut{}0.00}}%
+      \put(1008,204){\makebox(0,0)[r]{\strut{}10^-07}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,1121){\makebox(0,0)[r]{\strut{}5.00}}%
+      \put(1008,525){\makebox(0,0)[r]{\strut{}10^-06}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,1631){\makebox(0,0)[r]{\strut{}10.00}}%
+      \put(1008,846){\makebox(0,0)[r]{\strut{}10^-05}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,2140){\makebox(0,0)[r]{\strut{}15.00}}%
+      \put(1008,1167){\makebox(0,0)[r]{\strut{}10^-04}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,2649){\makebox(0,0)[r]{\strut{}20.00}}%
+      \put(1008,1489){\makebox(0,0)[r]{\strut{}10^-03}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,3159){\makebox(0,0)[r]{\strut{}25.00}}%
+      \put(1008,1810){\makebox(0,0)[r]{\strut{}10^-02}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,3668){\makebox(0,0)[r]{\strut{}30.00}}%
+      \put(1008,2131){\makebox(0,0)[r]{\strut{}10^-01}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(5206,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}0}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5630,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}5000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6053,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}10000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6477,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}15000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6900,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}20000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(7324,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}25000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(7747,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}30000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(8171,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}35000}}}%
+      \put(1008,2452){\makebox(0,0)[r]{\strut{}10^+00}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
-      \put(4348,2140){\rotatebox{-270}{\makebox(0,0){\strut{}position}}}%
+      \put(150,1328){\rotatebox{-270}{\makebox(0,0){\strut{}Relative error}}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{/home/s1992054/QMD/src/nai/plots/nai_trajectory}}%
+    \put(0,0){\includegraphics{/home/s1992054/QMD/src/wip_lz/plots/momentum}}%
     \gplfronttext
   \end{picture}%
 \endgroup
