--- a/src/wip_lz/plots/exact.tex
+++ b/src/wip_lz/plots/exact.tex
@@ -79,79 +79,57 @@
     \fi%
     \setlength{\fboxrule}{0.5pt}%
     \setlength{\fboxsep}{1pt}%
-\begin{picture}(8620.00,4300.00)%
-      \csname LTb\endcsname%%
-      \put(4310,4096){\makebox(0,0){\strut{}NaI case study}}%
+\begin{picture}(7180.00,2860.00)%
     \gplgaddtomacro\gplbacktext{%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,612){\makebox(0,0)[r]{\strut{}10^{-3}}}%
+      \put(1008,816){\makebox(0,0)[r]{\strut{}10^-08}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,1631){\makebox(0,0)[r]{\strut{}10^{-2}}}%
+      \put(1008,1046){\makebox(0,0)[r]{\strut{}10^-07}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,2649){\makebox(0,0)[r]{\strut{}10^{-1}}}%
+      \put(1008,1276){\makebox(0,0)[r]{\strut{}10^-06}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(784,3668){\makebox(0,0)[r]{\strut{}10^{0}}}%
+      \put(1008,1506){\makebox(0,0)[r]{\strut{}10^-05}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(896,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}0}}}%
+      \put(1008,1736){\makebox(0,0)[r]{\strut{}10^-04}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(1320,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}10000}}}%
+      \put(1008,1965){\makebox(0,0)[r]{\strut{}10^-03}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(1743,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}20000}}}%
+      \put(1008,2195){\makebox(0,0)[r]{\strut{}10^-02}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(2167,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}30000}}}%
+      \put(1008,2425){\makebox(0,0)[r]{\strut{}10^-01}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(2590,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}40000}}}%
+      \put(1008,2655){\makebox(0,0)[r]{\strut{}10^+00}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3014,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}50000}}}%
+      \put(1120,612){\makebox(0,0){\strut{}$0$}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3437,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}60000}}}%
+      \put(1580,612){\makebox(0,0){\strut{}$0.1$}}%
       \colorrgb{0.50,0.50,0.50}%%
-      \put(3861,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}70000}}}%
+      \put(2041,612){\makebox(0,0){\strut{}$0.2$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(2501,612){\makebox(0,0){\strut{}$0.3$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(2961,612){\makebox(0,0){\strut{}$0.4$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(3422,612){\makebox(0,0){\strut{}$0.5$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(3882,612){\makebox(0,0){\strut{}$0.6$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(4342,612){\makebox(0,0){\strut{}$0.7$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(4802,612){\makebox(0,0){\strut{}$0.8$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(5263,612){\makebox(0,0){\strut{}$0.9$}}%
+      \colorrgb{0.50,0.50,0.50}%%
+      \put(5723,612){\makebox(0,0){\strut{}$1$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
-      \put(150,2140){\rotatebox{-270}{\makebox(0,0){\strut{}$\|\phi\|_{L^2}$}}}%
+      \put(150,1735){\rotatebox{-270}{\makebox(0,0){\strut{}Exact mass}}}%
       \csname LTb\endcsname%%
-      \put(2114,846){\makebox(0,0)[r]{\strut{}$\phi^-$}}%
-    }%
-    \gplgaddtomacro\gplbacktext{%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,612){\makebox(0,0)[r]{\strut{}0.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,1121){\makebox(0,0)[r]{\strut{}5.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,1631){\makebox(0,0)[r]{\strut{}10.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,2140){\makebox(0,0)[r]{\strut{}15.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,2649){\makebox(0,0)[r]{\strut{}20.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,3159){\makebox(0,0)[r]{\strut{}25.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5094,3668){\makebox(0,0)[r]{\strut{}30.00}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5206,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}0}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(5630,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}5000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6053,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}10000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6477,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}15000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(6900,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}20000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(7324,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}25000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(7747,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}30000}}}%
-      \colorrgb{0.50,0.50,0.50}%%
-      \put(8171,500){\rotatebox{45}{\makebox(0,0)[r]{\strut{}35000}}}%
-    }%
-    \gplgaddtomacro\gplfronttext{%
-      \csname LTb\endcsname%%
-      \put(4348,2140){\rotatebox{-270}{\makebox(0,0){\strut{}position}}}%
+      \put(3421,306){\makebox(0,0){\strut{}$\delta$}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{/home/s1992054/QMD/src/nai/plots/nai_trajectory}}%
+    \put(0,0){\includegraphics{/home/s1992054/QMD/src/wip_lz/plots/exact}}%
     \gplfronttext
   \end{picture}%
 \endgroup
